<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1E1E"
    tools:context=".HomeActivity"
    tools:ignore="HardcodedText,RtlHardcoded,ContentDescription">


    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="#0DFFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/map_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:onClick="onClick"
        android:text="Map View"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/list_view"
        app:layout_constraintTop_toBottomOf="@+id/search_bar" />

    <TextView
        android:id="@+id/list_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:onClick="onClick"
        android:text="List View"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/search_bar"
        app:layout_constraintVertical_bias="0.526" />

    <TextView
        android:id="@+id/friends_only"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:onClick="onClick"
        android:text="Toggle: all"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar"
        app:layout_constraintVertical_bias="0.526" />

    <ImageButton
        android:id="@+id/create_listing"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="#00FFFFFF"
        android:onClick="onClick"
        android:scaleType="fitXY"
        android:src="@drawable/plus"
        android:tint="#C8C8C8"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/search_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="6dp"
        android:background="#00FFFFFF"
        android:onClick="onClick"
        android:scaleType="centerInside"
        android:src="@drawable/search"
        android:tint="#C8C8C8"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/search_bar"
        app:layout_constraintEnd_toEndOf="@+id/search_bar"
        app:layout_constraintTop_toTopOf="@+id/search_bar" />

    <ImageButton
        android:id="@+id/dashboard_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="#00FFFFFF"
        android:onClick="onClick"
        android:scaleType="centerInside"
        android:src="@drawable/person"
        android:tint="#C8C8C8"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/search_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:background="#1AFFFFFF"
        android:ems="10"
        android:gravity="center|left"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/create_listing"
        app:layout_constraintEnd_toStartOf="@+id/create_listing"
        app:layout_constraintStart_toEndOf="@+id/dashboard_button"
        android:autofillHints=""
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor"
        tools:targetApi="o" />

    <ListView
        android:id="@+id/lvListing"
        android:layout_width="385dp"
        android:layout_height="487dp"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="140dp"
        android:layout_height="20dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="#FFFFFF"
        android:backgroundTintMode="multiply"
        android:gravity="center"
        android:textAlignment="center"
        android:visibility="visible"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar" />

    <Spinner
        android:id="@+id/sort_spinner"
        android:layout_width="140dp"
        android:layout_height="20dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="#FFFFFF"
        android:backgroundTintMode="multiply"
        android:gravity="center"
        android:textAlignment="center"
        android:visibility="visible"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:text="Filter"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toEndOf="@+id/sort_spinner"
        app:layout_constraintTop_toTopOf="@+id/spinner" />

    <TextView
        android:id="@+id/TextViewSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="Sort"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/sort_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sort_spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>
