...
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/bTitle"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@android:color/transparent"
            android:gravity="start"
...
