...
    android:background="#1E1E1E"
    tools:context=".SingleListingActivity"
    tools:ignore="HardcodedText">


    <TextView
        android:id="@+id/detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="#FFFFFF"
...
